--- a/templates/landing/base.html
+++ b/templates/landing/base.html
@@ -1,19 +1,19 @@
 {% load static %}
-
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static '/landing/css/base.css' %}">
-    <script src="{% static '/landing/js/main.js' %}" defer=""></script>
+    <link rel="stylesheet" href="{% static 'landing/css/base.css' %}">
+    <script src="{% static 'landing/js/main.js' %}" defer></script>
 
 {#      <link rel="icon" href="{% static 'landing/img//icon.png">#}
 {#      <link rel="icon" href="{% static 'landing/img//favicons/favicon.svg' %}" type="image/svg+xml">#}
 {#      <link rel="icon" type="image/png" href="./main/main/img/favicons/favicon-32.svg' %}">#}
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <title>Знакомства здесь | онлайн знакомства</title>
     <style>
         .logo {
