📝 Update price.html and privacy.html with new content

--- a/templates/landing/price.html
+++ b/templates/landing/price.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static '/landing/css/price.css' %}">
+    <link rel="stylesheet" href="{% static 'landing/css/price.css' %}">
     <div class="tab">
         <div class="tab-text">
              Цены и тарифы
@@ -10,16 +10,23 @@
     </div>
 
     <main>
-        <p><strong>ОСНОВНОЙ ТАРИФ</strong></p>
-        <p>"Выложить анкету на 1 сутки" — 99.00 RUB (через 24ч - 399р/14 дней)</p>
-        <p>"Выложить анкету на 1 неделю" — 199.00 RUB (через 24ч - 399р/14 дней)</p>
-        <p>"Выложить анкету на 2 недели" — 399.00 RUB (через 24ч - 399р/14 дней)</p>
-        <p>"Выложить анкету на 1 месяц" — 799.00 RUB (через 24ч - 399р/14 дней)</p>
-        <p><strong>Согласно маркетинговой стратегии, пользователю</strong></p>
-        <p><strong>могут быть предложены индивидуальные тарифные предложения:</strong></p>
-        <p>"Выложить анкету на 1 сутки" - 9.00 RUB (через 24ч - 399р/14 дней)</p>
-        <p>При подключении тарифа, Вам предоставляется услуга на то время, на какое Вы оплатили. Далее списание денежных средств в размере 799 (семьсот девяносто девять) рублей осуществляются без дополнительного акцепта. В случае невозможности списания всей суммы возможно частичное списание пропорциональное количеству дней доступа. Стоимость доступа к услуге в течение двух недель составляет 399 (триста девяносто девять) рублей. Стоимость доступа в течение недели составляет 199 (сто девяносто девять) рублей. Стоимость доступа к услуге в течение одного дня составляет 99 (девяносто девять) рублей.</p>
-        <p>О тарифах:</p>
+        <p><strong>ОСНОВНЫЕ ТАРИФЫ</strong></p>
+        <p>"Тариф на 1 сутки" — 99.00 RUB (через 24ч - 399р/14 дней)</p>
+        <p>"Тариф на 1 неделю" — 199.00 RUB (через 24ч - 399р/14 дней)</p>
+        <p>"Тариф на 2 недели" — 399.00 RUB (через 24ч - 399р/14 дней)</p>
+        <p>"Тариф на 1 месяц" — 799.00 RUB (через 24ч - 399р/14 дней)</p>
+        
+        <p><strong>Согласно маркетинговой стратегии, пользователю могут быть предложены индивидуальные тарифные предложения:</strong></p>
+        <p>"Тариф на 1 сутки" - 29.00 RUB (через 24ч - 399р/14 дней)</p>
+        
+        <p>При подключении тарифа, Вам предоставляется услуга на то время, на какое Вы оплатили. Далее списание денежных средств в размере 399 (триста девяносто девять) рублей осуществляются без дополнительного акцепта. В случае невозможности списания всей суммы возможно частичное списание пропорциональное количеству дней доступа. Стоимость доступа в течение недели составляет 199 (сто девяносто девять) рублей. Стоимость доступа к услуге в течение одного дня составляет 99 (девяносто девять) рублей.</p>
+        
+        <p><strong>СТАРЫЕ ТАРИФЫ:</strong></p>
+        <p>"Тариф на 1 сутки" — 1.00 RUB (через 24ч - 399р/14 дней)</p>
+        <p>"Тариф на 1 сутки" — 9.00 RUB (через 24ч - 399р/14 дней)</p>
+        <p>"Тариф на 1 сутки" — 49.00 RUB (через 24ч - 399р/14 дней)</p>
+        
+        <p><strong>О тарифах:</strong></p>
         <p>Подписка будет продлеваться автоматически и оплачиваться с привязанной при первом платеже карты. Отмена подписки доступна на странице отписки в любой момент.</p>
         <p>В случае, если Пользователь выбирает и оплачивает доступа по индивидуальному тарифному предложению (к примеру — пробный Премиум доступ на 1 день), то после истечения этого срока, Правообладатель имеет право предоставить Пользователю продление подписки на 1 (один) месяц без повторного подтверждения подписки Пользователем. Оплата за такое продление подписки будет списана с Пользователя по истечении срока подписки (на 2-й день) по изначальному тарифу (пробный Премиум доступ на 1 день) за каждый день предоставленной дополнительной подписки.</p>
         <p>Продление действия пакета в вашем аккаунте происходит в день окончания предыдущего оплаченного периода.</p>
