Initial commit - Django project ready for Render deployment

--- a/templates/landing/home.html
+++ b/templates/landing/home.html
@@ -7,7 +7,7 @@
             <div class="container hero__container">
                 <div class="hero__content">
                     <h1 class="hero__title wow fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
-                        Ассалямуалейкум Общение без границ, страхов и предрассудков
+                        Общение без границ, страхов и предрассудков
                     </h1>
                     <p class="hero__descr wow fadeIn" data-wow-delay="1s"
                        style="visibility: visible; animation-delay: 1s; animation-name: fadeIn;">
