Update all legal documents: price, contacts, privacy, and terms with new content

--- a/templates/landing/contacts.html
+++ b/templates/landing/contacts.html
@@ -1,24 +1,9 @@
-{% extends 'landing/base.html' %}
-{% load static %}
+По вопросам размещения рекламы и сотрудничества Вы всегда можете обращаться к владельцу @botsupportg.
 
-{% block content %}
-    <link rel="stylesheet" href="{% static '/landing/css/price.css' %}">
 
-    <div class="tab">
-        <div class="tab-text">
-             Контакты
-        </div>
-    </div>
-
-    <main>
-        <p>По вопросам размещения рекламы и сотрудничества Вы всегда можете обращаться сюда: <a href="https://t.me/botsupportg">https://t.me/botsupportg.</a>
-        <br>При возникновении любых вопросов связанных с работой телеграм-бота и канала <a href="https://t.me/anketa_publish_bot">https://t.me/anketa_publish_bot</a> и <a href="https://t.me/+AoCahiRefXA2MmUy">https://t.me/+AoCahiRefXA2MmUy</a> просим вас писать по адресу: <a href="https://t.me/botsupportg">https://t.me/botsupportg</a>.</p>
-
-        <p>Контакты технической поддержки:
-        <br>Telegram - <a href="https://t.me/botsupportg">https://t.me/botsupportg</a></p>
-
-        <p>Режим работы поддержки:
-        <br>С понедельника по пятницу, c 10:00 до 22:00
-        <br>Вы всегда можете отменить платную подписку самостоятельно, прописав команду /cancelvip в боте <a href="https://t.me/anketa_publish_bot">@anketa_publish_bot</a>.
-    </main>
-{% endblock %}
+Контакты технической поддержки:
+Telegram - https:/t.me/botsupportg
+Режим работы поддержки:
+С понедельника по пятницу, c 10:00 до 18:00
+Вы всегда можете отменить платную подписку самостоятельно на странице отписок.
+Напоминаем что Вы можете самостоятельно отказаться от платной подписки в любое время на странице отмены, а также что начиная использовать Сайт и/или его отдельные функции , Пользователь считается принявшим все документы устанавливающие порядок взаимодействия между пользователем и Администрацией сайта в том числе Политику конфиденциальности, а также условия Регулирующих документов, в полном объеме, без всяких оговорок и исключений. В случае несогласия Пользователя с какими-либо из положений указанных документов, Пользователь не вправе использовать Сайт.
