Update legal documents with new content while preserving HTML structure

--- a/templates/landing/contacts.html
+++ b/templates/landing/contacts.html
@@ -1,9 +1,24 @@
-По вопросам размещения рекламы и сотрудничества Вы всегда можете обращаться к владельцу @botsupportg.
+{% extends 'landing/base.html' %}
+{% load static %}
 
+{% block content %}
+    <link rel="stylesheet" href="{% static '/landing/css/price.css' %}">
 
-Контакты технической поддержки:
-Telegram - https:/t.me/botsupportg
-Режим работы поддержки:
-С понедельника по пятницу, c 10:00 до 18:00
-Вы всегда можете отменить платную подписку самостоятельно на странице отписок.
-Напоминаем что Вы можете самостоятельно отказаться от платной подписки в любое время на странице отмены, а также что начиная использовать Сайт и/или его отдельные функции , Пользователь считается принявшим все документы устанавливающие порядок взаимодействия между пользователем и Администрацией сайта в том числе Политику конфиденциальности, а также условия Регулирующих документов, в полном объеме, без всяких оговорок и исключений. В случае несогласия Пользователя с какими-либо из положений указанных документов, Пользователь не вправе использовать Сайт.
+    <div class="tab">
+        <div class="tab-text">
+             Контакты
+        </div>
+    </div>
+
+    <main>
+        <p>По вопросам размещения рекламы и сотрудничества Вы всегда можете обращаться к владельцу @botsupportg.</p>
+
+        <p>Контакты технической поддержки:
+        <br>Telegram - https:/t.me/botsupportg</p>
+
+        <p>Режим работы поддержки:
+        <br>С понедельника по пятницу, c 10:00 до 18:00
+        <br>Вы всегда можете отменить платную подписку самостоятельно на странице отписок.
+        <br>Напоминаем что Вы можете самостоятельно отказаться от платной подписки в любое время на странице отмены, а также что начиная использовать Сайт и/или его отдельные функции , Пользователь считается принявшим все документы устанавливающие порядок взаимодействия между пользователем и Администрацией сайта в том числе Политику конфиденциальности, а также условия Регулирующих документов, в полном объеме, без всяких оговорок и исключений. В случае несогласия Пользователя с какими-либо из положений указанных документов, Пользователь не вправе использовать Сайт.</p>
+    </main>
+{% endblock %}
