--- a/templates/landing/privacy.html
+++ b/templates/landing/privacy.html
@@ -1,56 +1,77 @@
-Настоящая Политика обработки (конфиденциальности) персональных данных (далее - Политика) действует в отношении всей информации, размещенной на сайте в сети Интернет по адресу: t.me/zz_zdes_bot (далее - Сайт), которую Пользователи могут получить во время использования Сайта, его сервисов, программ и продуктов.
-Использование сервисов Сайта означает безоговорочное согласие Пользователя с настоящей Политикой и указанными в ней условиями обработки его персональной информации; в случае несогласия с этими условиями Пользователь должен воздержаться от использования сервисов.
-1. ОБЩИЕ ПОЛОЖЕНИЯ
-1.1. В рамках настоящей Политики под персональной информацией Пользователя понимаются:
-1.1.1. Персональная информация, которую Пользователь предоставляет о себе самостоятельно при регистрации (создании учетной записи) или в процессе использования Сервисов, включая персональные данные Пользователя. Обязательная для предоставления Сервисов информация помечена специальным образом. Иная информация предоставляется Пользователем на его усмотрение.
-1.1.2. Данные, которые автоматически передаются сервисам Сайта в процессе их использования с помощью установленного на устройстве Пользователя программного обеспечения, в том числе IP-адрес, данные файлов cookie, информация о браузере Пользователя (или иной программе, с помощью которой осуществляется доступ к сервисам), технические характеристики оборудования и программного обеспечения, используемых Пользователем, дата и время доступа к сервисам, адреса запрашиваемых страниц и иная подобная информация.
-1.1.3. Иная информация о Пользователе, обработка которой предусмотрена Соглашением об использовании Сайта.
-1.1.4. Настоящая Политика конфиденциальности применяется только к Сайту t.me/zz_zdes_bot и его сервисам. Сайт https://t.me/anketa_publish_bot и https://t.me/+AoCahiRefXA2MmUy не контролирует и не несет ответственности за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным на Сайте t.me/zz_zdes_bot.
-2. ЦЕЛИ ОБРАБОТКИ ПЕРСОНАЛЬНОЙ ИНФОРМАЦИИ ПОЛЬЗОВАТЕЛЕЙ
-2.1. Сайт собирает и хранит только ту персональную информацию, которая необходима для предоставления сервисов или исполнения соглашений и договоров с Пользователем, за исключением случаев, когда законодательством предусмотрено обязательное хранение персональной информации в течение определенного законом срока.
-2.2. Персональную информацию Пользователя Сайт обрабатывает в следующих целях:
-2.2.1. Идентификации Пользователя, зарегистрированного на Сайте.
-2.2.2. Предоставления Пользователю доступа к персонализированным ресурсам Сайта.
-2.2.3. Установления с Пользователем обратной связи, включая направление уведомлений, запросов, касающихся использования Сайта, оказания услуг, обработку запросов и заявок от Пользователя.
-2.2.4. Определения места нахождения Пользователя для обеспечения безопасности, предотвращения мошенничества.
-2.2.5. Подтверждения достоверности и полноты персональных данных, предоставленных Пользователем.
-2.2.6. Предоставления Пользователю эффективной клиентской и технической поддержки при возникновении проблем, связанных с использованием Сайта.
-2.2.7. Осуществления рекламной деятельности с согласия Пользователя.
-3. УСЛОВИЯ ОБРАБОТКИ ПЕРСОНАЛЬНОЙ ИНФОРМАЦИИ ПОЛЬЗОВАТЕЛЕЙ И ЕЕ ПЕРЕДАЧИ ТРЕТЬИМ ЛИЦАМ
-3.1. Сайт хранит персональную информацию Пользователей в соответствии с внутренними регламентами конкретных сервисов.
-3.2. В отношении персональной информации Пользователя сохраняется ее конфиденциальность, кроме случаев добровольного предоставления Пользователем информации о себе для общего доступа неограниченному кругу лиц. При использовании отдельных сервисов Пользователь соглашается с тем, что определенная часть его персональной информации становится общедоступной.
-3.3. Сайт вправе передать персональную информацию Пользователя третьим лицам в следующих случаях:
-3.3.1. Пользователь выразил согласие на такие действия.
-3.3.2. Передача необходима для использования Пользователем определенного сервиса либо для исполнения определенного соглашения или договора с Пользователем.
-3.3.4. Передача предусмотрена российским или иным применимым законодательством в рамках установленной законодательством процедуры.
-3.3.5. В случае продажи Сайта к приобретателю переходят все обязательства по соблюдению условий настоящей Политики применительно к полученной им персональной информации.
-3.4. Обработка персональных данных Пользователя осуществляется без ограничения срока любым законным способом, в том числе в информационных системах персональных данных с использованием средств автоматизации или без использования таких средств. Обработка персональных данных Пользователей осуществляется в соответствии с Федеральным законом от 27.07.2006 №152-ФЗ "О персональных данных".
-3.5. При утрате или разглашении персональных данных Администрация Сайта информирует Пользователя об утрате или разглашении персональных данных.
-3.6. Администрация Сайта принимает необходимые организационные и технические меры для защиты персональной информации Пользователя от неправомерного или случайного доступа, уничтожения, изменения, блокирования, копирования, распространения, а также от иных неправомерных действий третьих лиц.
-3.7. Администрация Сайта совместно с Пользователем принимает все необходимые меры по предотвращению убытков или иных отрицательных последствий, вызванных утратой или разглашением персональных данных Пользователя.
-4. ОБЯЗАТЕЛЬСТВА СТОРОН
-4.1. Пользователь обязан:
-4.1.1. Предоставить информацию о персональных данных, необходимую для пользования Сайтом.
-4.1.2. Обновлять, дополнять предоставленную информацию о персональных данных в случае изменения данной информации.
-4.2. Администрация Сайта обязана:
-4.2.1. Использовать полученную информацию исключительно для целей, указанных в настоящей Политике.
-4.2.2. Обеспечить хранение конфиденциальной информации в тайне, не разглашать без предварительного письменного разрешения Пользователя, а также не осуществлять продажу, обмен, опубликование либо разглашение иными возможными способами переданных персональных данных Пользователя, за исключением предусмотренных настоящей Политикой.
-4.2.3. Принимать меры предосторожности для защиты конфиденциальности персональных данных Пользователя согласно порядку, обычно используемому для защиты такого рода информации в существующем деловом обороте.
-4.2.4. Осуществить блокирование персональных данных, относящихся к соответствующему Пользователю, с момента обращения или запроса Пользователя или его законного представителя либо уполномоченного органа по защите прав субъектов персональных данных на период проверки в случае выявления недостоверных персональных данных или неправомерных действий.
-5. ОТВЕТСТВЕННОСТЬ СТОРОН
-5.1. Администрация Сайта, не исполнившая свои обязательства, несет ответственность в соответствии с законодательством Российской Федерации.
-5.2. В случае утраты или разглашения конфиденциальной информации Администрация Сайта не несет ответственности, если данная конфиденциальная информация:
-5.2.1. Стала публичным достоянием до ее утраты или разглашения.
-5.2.2. Была получена от третьей стороны до момента ее получения Администрацией Сайта.
-5.2.3. Была разглашена с согласия Пользователя.
-6. РАЗРЕШЕНИЕ СПОРОВ
-6.1. До обращения в суд с иском по спорам, возникающим из отношений между Пользователем Сайта и Администрацией Сайта, обязательным является предъявление претензии (письменного предложения о добровольном урегулировании спора).
-6.2. Получатель претензии в течение 30 календарных дней со дня получения претензии письменно уведомляет заявителя претензии о результатах рассмотрения претензии.
-6.3. При недостижении соглашения спор будет передан на рассмотрение в суд в соответствии с действующим законодательством Российской Федерации.
-6.4. К настоящей Политике и отношениям между Пользователем и Администрацией Сайта применяется действующее законодательство Российской Федерации.
-7. ДОПОЛНИТЕЛЬНЫЕ УСЛОВИЯ
-7.1. Администрация Сайта вправе вносить изменения в настоящую Политику без согласия Пользователя.
-7.2. Новая Политика вступает в силу с момента ее размещения на Сайте, если иное не предусмотрено новой редакцией Политики.
-7.3. Все предложения или вопросы по настоящей Политике конфиденциальности следует сообщать в личные сообщения телеграм @botsupportg
-7.4. Действующая Политика размещена на странице по адресу: http://zzdes.ru/.
-7.5. Настоящая Политика является неотъемлемой частью Соглашения об использовании Сайта, размещенного на странице по адресу: http://zzdes.ru/.
+{% extends 'landing/base.html' %}
+{% load static %}
+
+{% block content %}
+    <link rel="stylesheet" href="{% static 'landing/css/privacy.css' %}">
+    <div class="tab">
+        <div class="tab-text">
+             Политика конфиденциальности
+        </div>
+    </div>
+
+    <main>
+        <p>Настоящая Политика обработки (конфиденциальности) персональных данных (далее - Политика) действует в отношении всей информации, размещенной на сайте в сети Интернет по адресу: t.me/zz_zdes_bot (далее - Сайт), которую Пользователи могут получить во время использования Сайта, его сервисов, программ и продуктов.</p>
+        <p>Использование сервисов Сайта означает безоговорочное согласие Пользователя с настоящей Политикой и указанными в ней условиями обработки его персональной информации; в случае несогласия с этими условиями Пользователь должен воздержаться от использования сервисов.</p>
+        
+        <p><strong>1. ОБЩИЕ ПОЛОЖЕНИЯ</strong></p>
+        <p>1.1. В рамках настоящей Политики под персональной информацией Пользователя понимаются:</p>
+        <p>1.1.1. Персональная информация, которую Пользователь предоставляет о себе самостоятельно при регистрации (создании учетной записи) или в процессе использования Сервисов, включая персональные данные Пользователя. Обязательная для предоставления Сервисов информация помечена специальным образом. Иная информация предоставляется Пользователем на его усмотрение.</p>
+        <p>1.1.2. Данные, которые автоматически передаются сервисам Сайта в процессе их использования с помощью установленного на устройстве Пользователя программного обеспечения, в том числе IP-адрес, данные файлов cookie, информация о браузере Пользователя (или иной программе, с помощью которой осуществляется доступ к сервисам), технические характеристики оборудования и программного обеспечения, используемых Пользователем, дата и время доступа к сервисам, адреса запрашиваемых страниц и иная подобная информация.</p>
+        <p>1.1.3. Иная информация о Пользователе, обработка которой предусмотрена Соглашением об использовании Сайта.</p>
+        <p>1.1.4. Настоящая Политика конфиденциальности применяется только к Сайту t.me/zz_zdes_bot и его сервисам. Сайт <a href="https://t.me/anketa_publish_bot">https://t.me/anketa_publish_bot</a> и <a href="https://t.me/+AoCahiRefXA2MmUy">https://t.me/+AoCahiRefXA2MmUy</a> не контролирует и не несет ответственности за сайты третьих лиц, на которые Пользователь может перейти по ссылкам, доступным на Сайте t.me/zz_zdes_bot.</p>
+        
+        <p><strong>2. ЦЕЛИ ОБРАБОТКИ ПЕРСОНАЛЬНОЙ ИНФОРМАЦИИ ПОЛЬЗОВАТЕЛЕЙ</strong></p>
+        <p>2.1. Сайт собирает и хранит только ту персональную информацию, которая необходима для предоставления сервисов или исполнения соглашений и договоров с Пользователем, за исключением случаев, когда законодательством предусмотрено обязательное хранение персональной информации в течение определенного законом срока.</p>
+        <p>2.2. Персональную информацию Пользователя Сайт обрабатывает в следующих целях:</p>
+        <p>2.2.1. Идентификации Пользователя, зарегистрированного на Сайте.</p>
+        <p>2.2.2. Предоставления Пользователю доступа к персонализированным ресурсам Сайта.</p>
+        <p>2.2.3. Установления с Пользователем обратной связи, включая направление уведомлений, запросов, касающихся использования Сайта, оказания услуг, обработку запросов и заявок от Пользователя.</p>
+        <p>2.2.4. Определения места нахождения Пользователя для обеспечения безопасности, предотвращения мошенничества.</p>
+        <p>2.2.5. Подтверждения достоверности и полноты персональных данных, предоставленных Пользователем.</p>
+        <p>2.2.6. Предоставления Пользователю эффективной клиентской и технической поддержки при возникновении проблем, связанных с использованием Сайта.</p>
+        <p>2.2.7. Осуществления рекламной деятельности с согласия Пользователя.</p>
+        
+        <p><strong>3. УСЛОВИЯ ОБРАБОТКИ ПЕРСОНАЛЬНОЙ ИНФОРМАЦИИ ПОЛЬЗОВАТЕЛЕЙ И ЕЕ ПЕРЕДАЧИ ТРЕТЬИМ ЛИЦАМ</strong></p>
+        <p>3.1. Сайт хранит персональную информацию Пользователей в соответствии с внутренними регламентами конкретных сервисов.</p>
+        <p>3.2. В отношении персональной информации Пользователя сохраняется ее конфиденциальность, кроме случаев добровольного предоставления Пользователем информации о себе для общего доступа неограниченному кругу лиц. При использовании отдельных сервисов Пользователь соглашается с тем, что определенная часть его персональной информации становится общедоступной.</p>
+        <p>3.3. Сайт вправе передать персональную информацию Пользователя третьим лицам в следующих случаях:</p>
+        <p>3.3.1. Пользователь выразил согласие на такие действия.</p>
+        <p>3.3.2. Передача необходима для использования Пользователем определенного сервиса либо для исполнения определенного соглашения или договора с Пользователем.</p>
+        <p>3.3.4. Передача предусмотрена российским или иным применимым законодательством в рамках установленной законодательством процедуры.</p>
+        <p>3.3.5. В случае продажи Сайта к приобретателю переходят все обязательства по соблюдению условий настоящей Политики применительно к полученной им персональной информации.</p>
+        <p>3.4. Обработка персональных данных Пользователя осуществляется без ограничения срока любым законным способом, в том числе в информационных системах персональных данных с использованием средств автоматизации или без использования таких средств. Обработка персональных данных Пользователей осуществляется в соответствии с Федеральным законом от 27.07.2006 №152-ФЗ "О персональных данных".</p>
+        <p>3.5. При утрате или разглашении персональных данных Администрация Сайта информирует Пользователя об утрате или разглашении персональных данных.</p>
+        <p>3.6. Администрация Сайта принимает необходимые организационные и технические меры для защиты персональной информации Пользователя от неправомерного или случайного доступа, уничтожения, изменения, блокирования, копирования, распространения, а также от иных неправомерных действий третьих лиц.</p>
+        <p>3.7. Администрация Сайта совместно с Пользователем принимает все необходимые меры по предотвращению убытков или иных отрицательных последствий, вызванных утратой или разглашением персональных данных Пользователя.</p>
+        
+        <p><strong>4. ОБЯЗАТЕЛЬСТВА СТОРОН</strong></p>
+        <p>4.1. Пользователь обязан:</p>
+        <p>4.1.1. Предоставить информацию о персональных данных, необходимую для пользования Сайтом.</p>
+        <p>4.1.2. Обновлять, дополнять предоставленную информацию о персональных данных в случае изменения данной информации.</p>
+        <p>4.2. Администрация Сайта обязана:</p>
+        <p>4.2.1. Использовать полученную информацию исключительно для целей, указанных в настоящей Политике.</p>
+        <p>4.2.2. Обеспечить хранение конфиденциальной информации в тайне, не разглашать без предварительного письменного разрешения Пользователя, а также не осуществлять продажу, обмен, опубликование либо разглашение иными возможными способами переданных персональных данных Пользователя, за исключением предусмотренных настоящей Политикой.</p>
+        <p>4.2.3. Принимать меры предосторожности для защиты конфиденциальности персональных данных Пользователя согласно порядку, обычно используемому для защиты такого рода информации в существующем деловом обороте.</p>
+        <p>4.2.4. Осуществить блокирование персональных данных, относящихся к соответствующему Пользователю, с момента обращения или запроса Пользователя или его законного представителя либо уполномоченного органа по защите прав субъектов персональных данных на период проверки в случае выявления недостоверных персональных данных или неправомерных действий.</p>
+        
+        <p><strong>5. ОТВЕТСТВЕННОСТЬ СТОРОН</strong></p>
+        <p>5.1. Администрация Сайта, не исполнившая свои обязательства, несет ответственность в соответствии с законодательством Российской Федерации.</p>
+        <p>5.2. В случае утраты или разглашения конфиденциальной информации Администрация Сайта не несет ответственности, если данная конфиденциальная информация:</p>
+        <p>5.2.1. Стала публичным достоянием до ее утраты или разглашения.</p>
+        <p>5.2.2. Была получена от третьей стороны до момента ее получения Администрацией Сайта.</p>
+        <p>5.2.3. Была разглашена с согласия Пользователя.</p>
+        
+        <p><strong>6. РАЗРЕШЕНИЕ СПОРОВ</strong></p>
+        <p>6.1. До обращения в суд с иском по спорам, возникающим из отношений между Пользователем Сайта и Администрацией Сайта, обязательным является предъявление претензии (письменного предложения о добровольном урегулировании спора).</p>
+        <p>6.2. Получатель претензии в течение 30 календарных дней со дня получения претензии письменно уведомляет заявителя претензии о результатах рассмотрения претензии.</p>
+        <p>6.3. При недостижении соглашения спор будет передан на рассмотрение в суд в соответствии с действующим законодательством Российской Федерации.</p>
+        <p>6.4. К настоящей Политике и отношениям между Пользователем и Администрацией Сайта применяется действующее законодательство Российской Федерации.</p>
+        
+        <p><strong>7. ДОПОЛНИТЕЛЬНЫЕ УСЛОВИЯ</strong></p>
+        <p>7.1. Администрация Сайта вправе вносить изменения в настоящую Политику без согласия Пользователя.</p>
+        <p>7.2. Новая Политика вступает в силу с момента ее размещения на Сайте, если иное не предусмотрено новой редакцией Политики.</p>
+        <p>7.3. Все предложения или вопросы по настоящей Политике конфиденциальности следует сообщать в личные сообщения телеграм @botsupportg</p>
+        <p>7.4. Действующая Политика размещена на странице по адресу: http://zzdes.ru/.</p>
+        <p>7.5. Настоящая Политика является неотъемлемой частью Соглашения об использовании Сайта, размещенного на странице по адресу: http://zzdes.ru/.</p>
+    </main>
+{% endblock %}
