--- a/templates/landing/home.html
+++ b/templates/landing/home.html
@@ -14,7 +14,7 @@
                         Скучно ли вам бывает на паузах или вечерах? Хотите поделиться своим мнением или услышать чужую точку зрения?
                         Знакомства здесь – это ваш билет в мир знакомств, где каждый лайк – это приглашение к новому опыту.
                     </p>
-                    <a href="https://t.me/anketa_publish_bot">
+                    <a href="https://t.me/zz_zdes_bot">
                         <button class="btn-reset hero__btn wow fadeIn" data-wow-delay="1s"
                                 style="visibility: visible; animation-delay: 1s; animation-name: fadeIn;">Начать
                         </button>
