--- a/templates/landing/price.html
+++ b/templates/landing/price.html
@@ -21,9 +21,9 @@
         <p>При подключении тарифа, Вам предоставляется услуга на то время, на какое Вы оплатили. Далее списание денежных средств в размере 399 (триста девяносто девять) рублей за 14 дней доступа осуществляются без дополнительного акцепта. В случае невозможности списания всей суммы возможно частичное списание пропорциональное количеству дней доступа. Стоимость доступа к услуге в течение недели 199 (сто девяносто девять) рублей. Стоимость доступа к услуге в течение одного дня составляет 99 (девяносто девять) рублей.</p>
         
         <p><strong>СТАРЫЕ ТАРИФЫ:</strong></p>
-        <p>"Тариф на 1 сутки" — 1.00 RUB (через 24ч - 399р/14 дней)</p>
-        <p>"Тариф на 1 сутки" — 9.00 RUB (через 24ч - 399р/14 дней)</p>
-        <p>"Тариф на 1 сутки" — 49.00 RUB (через 24ч - 399р/14 дней)</p>
+        <p>"Тариф на 1 сутки" — 1.00 RUB (далее - 399р/14 дней)</p>
+        <p>"Тариф на 1 сутки" — 9.00 RUB (далее - 399р/14 дней)</p>
+        <p>"Тариф на 1 сутки" — 49.00 RUB (далее - 399р/14 дней)</p>
         
         <p><strong>О тарифах:</strong></p>
         <p>Подписка будет продлеваться автоматически и оплачиваться с привязанной при первом платеже карты. Отмена подписки доступна на странице отписки в любой момент.</p>
