--- a/templates/landing/base.html
+++ b/templates/landing/base.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-    <title>Знакомства здесь | онлайн знакомства</title>
+    <title>ZZ знакомства | онлайн знакомства</title>
     <style>
         .logo {
             font-family: 'Quicksand', sans-serif;
@@ -51,7 +51,7 @@
     <header class="header">
         <div class="container header__container">
             <a href="/" class="header__logo">
-                <span class="logo">Знакомства здесь</span>
+                <span class="logo">ZZ знакомства</span>
             </a>
             <button class="btn-reset burger js-burger" aria-label="Открыть меню">
                 <span class="burger__line"></span>
@@ -82,7 +82,7 @@
     <footer class="footer">
         <div class="container footer__container">
             <a href="#" class="footer__logo">
-                <span class="logo">Знакомства здесь</span>
+                <span class="logo">ZZ знакомства</span>
             </a>
             <ul class="list-reset footer__list">
                 <li class="footer__item">
